--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <section class="firstTask">
+        <section class="first-task">
             <h1 class="title">Выберите бренд:</h1>
-            <form action="" class="firstTask__form">
+            <form action="" class="first-task__form">
                 <div class="select-brand">
                     <label class="select-brand__label">
                         <input class="select-brand__input sr-only" type="checkbox">
@@ -33,10 +33,10 @@
                 
             </form>
         </section>
-        <section class="secondTask">
+        <section class="second-task">
             <button class="button button__show-modal button-animation button-animation--orange" data-modal="consultation"><span> Заказать конусультацию</span> </button>
         </section >
-        <section class="thirdTask">
+        <section class="third-task">
             <div class="tab__list">
                 <div class="tab__item tab__item--active" data-show-tab="inexpensive">Самый дегевый</div>
                 <div class="tab__item" data-show-tab="expensive">Самый быстрый</div>
